# kirami-plugin-hitokoto

./: .gitignore  README.md  pyproject.toml
kirami_plugin_hitokoto/: __init__.py  service.toml
